Queue Item Management
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24333

--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/QueueItemManagement.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/QueueItemManagement.html
@@ -5,7 +5,11 @@
             <vr-row removeline>
                 <vr-columns width="normal">
                     <vr-select label="Queue Item Types" ismultipleselection hideselectedvaluessection="true" datatextfield="Title" datavaluefield="Id"
-                               datasource="::queueItemTypes" selectedvalues="selectedQueueItemTypes" entityname="Types"></vr-select>
+                               onselectionchanged="onchangeQueueItemTypes" datasource="::queueItemTypes" selectedvalues="selectedQueueItemTypes" entityname="Types"></vr-select>
+                </vr-columns>
+                <vr-columns width="normal">
+                    <vr-select label="Queue Instance" ismultipleselection hideselectedvaluessection="true" datatextfield="Title" datavaluefield="QueueInstanceId"
+                               datasource="queueInstances" selectedvalues="selectedQueueInstances" entityname="Instances"></vr-select>
                 </vr-columns>
             </vr-row>
         </div>
