git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24335

--- a/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToOperator.rdlc
@@ -239,6 +239,9 @@
         <Left>0.3125in</Left>
         <Height>0.48958in</Height>
         <Width>6.10432in</Width>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -254,6 +257,9 @@
         <Height>0.5in</Height>
         <Width>1.76042in</Width>
         <ZIndex>1</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -269,6 +275,9 @@
         <Height>0.59375in</Height>
         <Width>1.20833in</Width>
         <ZIndex>2</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1089,6 +1098,9 @@
         <Height>0.59375in</Height>
         <Width>6.10433in</Width>
         <ZIndex>5</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1270,6 +1282,9 @@
         <Height>0.21875in</Height>
         <Width>6.125in</Width>
         <ZIndex>6</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1495,6 +1510,9 @@
         <Height>0.25in</Height>
         <Width>6.10432in</Width>
         <ZIndex>9</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1602,6 +1620,9 @@
         <Height>1.13542in</Height>
         <Width>6.10433in</Width>
         <ZIndex>10</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1815,6 +1836,9 @@
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
         <ZIndex>11</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1999,6 +2023,9 @@
         <Height>0.21875in</Height>
         <Width>6.12501in</Width>
         <ZIndex>12</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2122,6 +2149,9 @@
         <Height>0.42188in</Height>
         <Width>6.10432in</Width>
         <ZIndex>13</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2455,6 +2485,9 @@
         <Height>0.21875in</Height>
         <Width>6.10435in</Width>
         <ZIndex>14</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2768,6 +2801,9 @@
         <Height>0.21875in</Height>
         <Width>6.10435in</Width>
         <ZIndex>15</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2887,6 +2923,9 @@
         <Height>0.47916in</Height>
         <Width>6.10433in</Width>
         <ZIndex>16</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
