--- a/FZero/Vanrise.Fzero.Services.Report/Reports/rptToSyrianOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Services.Report/Reports/rptToSyrianOperator.rdlc
@@ -238,7 +238,10 @@
         <Top>0.95708in</Top>
         <Left>0.3125in</Left>
         <Height>0.48958in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.09914in</Width>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -254,6 +257,9 @@
         <Height>0.5in</Height>
         <Width>1.76042in</Width>
         <ZIndex>1</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -269,6 +275,9 @@
         <Height>0.59375in</Height>
         <Width>1.86458in</Width>
         <ZIndex>2</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -376,6 +385,9 @@
         <Height>0.47916in</Height>
         <Width>6.09911in</Width>
         <ZIndex>3</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -959,7 +971,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -1016,7 +1028,7 @@
         <Top>2.98833in</Top>
         <Left>0.3125in</Left>
         <Height>1.26042in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.09914in</Width>
         <ZIndex>4</ZIndex>
         <Style>
           <Border>
@@ -1044,7 +1056,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Suspected Number/Trunks amd Usage Summary</Value>
+                              <Value>Suspected Number/Trunks and Usage Summary</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -1196,6 +1208,9 @@
         <Height>0.59375in</Height>
         <Width>6.125in</Width>
         <ZIndex>6</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1377,6 +1392,9 @@
         <Height>0.21875in</Height>
         <Width>6.125in</Width>
         <ZIndex>7</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1600,8 +1618,11 @@
         <Top>6.03in</Top>
         <Left>0.3125in</Left>
         <Height>0.25in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.09912in</Width>
         <ZIndex>10</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1709,6 +1730,9 @@
         <Height>1.13542in</Height>
         <Width>6.125in</Width>
         <ZIndex>11</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1922,6 +1946,9 @@
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
         <ZIndex>12</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2104,8 +2131,11 @@
         <Top>8.06771in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.125in</Width>
+        <Width>6.12501in</Width>
         <ZIndex>13</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2229,6 +2259,9 @@
         <Height>0.42188in</Height>
         <Width>6.125in</Width>
         <ZIndex>14</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2560,8 +2593,11 @@
         <Top>1.60547in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.0991in</Width>
         <ZIndex>15</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2873,8 +2909,11 @@
         <Top>1.42188in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.0991in</Width>
         <ZIndex>16</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
