--- a/FZero/Vanrise.Fzero.Services.Report/Reports/rptToZainOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Services.Report/Reports/rptToZainOperator.rdlc
@@ -239,6 +239,9 @@
         <Left>0.3125in</Left>
         <Height>0.48958in</Height>
         <Width>6.10432in</Width>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -254,6 +257,9 @@
         <Height>0.5in</Height>
         <Width>1.76042in</Width>
         <ZIndex>1</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -837,7 +843,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -894,7 +900,7 @@
         <Top>2.86333in</Top>
         <Left>0.3125in</Left>
         <Height>1.19792in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10429in</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
@@ -922,7 +928,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Suspected Number/Trunks amd Usage Summary</Value>
+                              <Value>Suspected Number/Trunks and Usage Summary</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -1072,8 +1078,11 @@
         <Top>4.30729in</Top>
         <Left>0.3125in</Left>
         <Height>0.59375in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>4</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1255,6 +1264,9 @@
         <Height>0.21875in</Height>
         <Width>6.10432in</Width>
         <ZIndex>5</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1480,6 +1492,9 @@
         <Height>0.25in</Height>
         <Width>6.10432in</Width>
         <ZIndex>8</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1585,8 +1600,11 @@
         <Top>6.38021in</Top>
         <Left>0.3125in</Left>
         <Height>1.13542in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>9</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1800,6 +1818,9 @@
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
         <ZIndex>10</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1982,8 +2003,11 @@
         <Top>8.06771in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>11</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2107,6 +2131,9 @@
         <Height>0.42188in</Height>
         <Width>6.10432in</Width>
         <ZIndex>12</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2440,6 +2467,9 @@
         <Height>0.21875in</Height>
         <Width>6.10435in</Width>
         <ZIndex>13</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2753,6 +2783,9 @@
         <Height>0.21875in</Height>
         <Width>6.10435in</Width>
         <ZIndex>14</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2870,8 +2903,11 @@
         <Top>1.99089in</Top>
         <Left>0.3125in</Left>
         <Height>0.47916in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>15</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
