--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
@@ -20,7 +20,7 @@
         <div>
             <vr-row>
                 <vr-columns width="fullrow">
-                    <vr-datagrid datasource="filteredDefinitions" loadmoredata="loadMoreData" on-ready="onGridReady" menuactions="gridMenuActions">
+                    <vr-datagrid datasource="filteredDefinitions"  on-ready="onGridReady" menuactions="gridMenuActions">
                         <vr-datagridcolumn headertext="'Process'" field="'Title'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Running Instances'" field="'RunningInstances'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridexpandablerow>
