--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
@@ -37,7 +37,7 @@
                                 </vr-datagrid>
                             </div>
                             <div ng-show="dataItem.isScheduledTabShow">
-                                <vr-datagrid datasource="dataItem.ScheduledTasks">
+                                <vr-datagrid datasource="dataItem.scheduledTasks">
                                     <vr-datagridcolumn headertext="'Name'" field="'Name'" isclickable="true" onclicked="viewScope.schedulerTaskClicked"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'ActionTypeId'" field="'ActionTypeId'"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'IsEnabled'" field="'IsEnabled'"></vr-datagridcolumn>
