--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/QueueItemManagement.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/QueueItemManagement.html
@@ -11,30 +11,33 @@
                     <vr-select label="Queue Instance" ismultipleselection hideselectedvaluessection="true" datatextfield="Title" datavaluefield="QueueInstanceId"
                                datasource="queueInstances" selectedvalues="selectedQueueInstances" entityname="Instances"></vr-select>
                 </vr-columns>
+                <vr-columns width="normal">
+                    <vr-select label="Status" ismultipleselection hideselectedvaluessection="true" datatextfield="Description" datavaluefield="Value"
+                               datasource="::queueItemStatus" selectedvalues="selectedQueueItemStatus" entityname="Status"></vr-select>
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="onSearchClicked"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
 
 
-        <!--<div>
+        <div>
             <vr-row>
                 <vr-columns width="fullrow">
                     <vr-datagrid datasource="::datasource" loadmoredata="loadMoreData" on-ready="onGridReady">
-                        <vr-datagridcolumn headertext="'Title'" field="'Title'" widthfactor="20" isclickable="'true'" onclicked="onTitleClicked"></vr-datagridcolumn>
-                        <vr-datagridcolumn headertext="'Last Message'" field="'LastMessage'" widthfactor="60"></vr-datagridcolumn>
-                        <vr-datagridcolumn headertext="'Retry'" field="'RetryCount'" widthfactor="5"></vr-datagridcolumn>
-                        <vr-datagridcolumn headertext="'Created Time'" field="'CreatedTime'" type="'Datetime'" widthfactor="10"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Description'" field="'Description'" widthfactor="75"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" widthfactor="5" getcolor="getStatusColor"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Created Time'" field="'CreatedTime'" type="'Datetime'" widthfactor="10"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Last Updated Time'" field="'LastUpdatedTime'" type="'Datetime'" widthfactor="10"></vr-datagridcolumn>
                     </vr-datagrid>
                 </vr-columns>
             </vr-row>
-        </div>-->
+        </div>
 
     </vr-form>
 </vr-panel>
