--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
@@ -40,7 +40,7 @@
                                 <vr-datagrid datasource="dataItem.scheduledTasks">
                                     <vr-datagridcolumn headertext="'Name'" field="'Name'" isclickable="true" onclicked="viewScope.schedulerTaskClicked"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'ActionTypeId'" field="'ActionTypeId'"></vr-datagridcolumn>
-                                    <vr-datagridcolumn headertext="'IsEnabled'" field="'IsEnabled'"></vr-datagridcolumn>
+                                    <vr-datagridcolumn headertext="'IsEnabled'" widthfactor="3">       <vr-switch value="dataItem.IsEnabled" disabled></vr-switch>            </vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'Status'" field="'Status'"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'TaskAction'" field="'TaskAction'"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'TaskId'" field="'TaskId'"></vr-datagridcolumn>
