Adding Definition type to widgets
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24374

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Directives/Templates/vr-chart-bi-directive-template.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Directives/Templates/vr-chart-bi-directive-template.html
@@ -11,4 +11,8 @@
     <vr-columns width="normal" ng-show=" selectedOperationType.value == 'TopEntities'">
         <vr-select datasource="selectedMeasureTypes" datatextfield="Name" datavaluefield="DisplayName" label="Top Measure" selectedvalues="selectedTopMeasure" isrequired hidefilterbox></vr-select>
     </vr-columns>
+
+    <vr-columns width="normal" ng-show=" selectedOperationType.value == 'MeasuresGroupedByTime'">
+        <vr-select datasource="definitionTypes" datatextfield="value" datavaluefield="description" label="Definition Type" selectedvalues="selectedDefinitionType" hidefilterbox></vr-select>
+    </vr-columns>
 </div>
