--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html
@@ -9,7 +9,7 @@
         <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn>
     </vr-datagrid>
 
-    <!--<h4>Suppliers Sale Zone {{ ZoneName }} </h4>
+    <h4>Suppliers Sale Zone {{ ZoneName }} </h4>
     <vr-datagrid datasource="suppliersData" data-on-ready="onMainGridReady">
         <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'" summaryfield="'TotalAverage'"></vr-datagridcolumn>
@@ -17,5 +17,5 @@
         <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPreviousPercentage'"></vr-datagridcolumn>
         <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'" summaryfield="'TotalValues[' + $index + ']'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn>
-    </vr-datagrid>-->
+    </vr-datagrid>
 </div>
