--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/QueueItemManagement.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Views/QueueItemManagement.html
@@ -15,6 +15,12 @@
                     <vr-select label="Status" ismultipleselection hideselectedvaluessection="true" datatextfield="Description" datavaluefield="Value"
                                datasource="::queueItemStatus" selectedvalues="selectedQueueItemStatus" entityname="Status"></vr-select>
                 </vr-columns>
+                <vr-columns width="normal">
+                    <vr-datetimepicker type="date" value="fromDate" label="From:"></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns width="normal">
+                    <vr-datetimepicker type="date" value="toDate" label="To:"></vr-datetimepicker>
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
